--- a/index.html
+++ b/index.html
@@ -16,178 +16,181 @@
   <body>
     <!--HEADER-->
     <header class="header">
-      <nav class="header-navigation">
-        <a class="logo-header link" href="./index.html"
-          ><span class="piece">WEB</span>STUDIO</a
-        >
-        <ul class="header-list list">
-          <li class="header-item">
-            <a class="header-link link" href="./index.html">Studio</a>
-          </li>
-          <li class="header-item">
-            <a class="header-link link" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li class="header-item">
-            <a class="header-link link" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address>
-        <ul class="header-contact list">
-          <li class="header-contact-item">
-            <a class="header-contact-link link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="header-contact-item">
-            <a class="header-contact-link link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container main-nav">
+        <nav class="header-navigation">
+          <a class="logo-header link" href="./index.html">
+            <span class="piece">WEB</span>STUDIO</a
+          >
+          <ul class="header-list list">
+            <li class="header-item">
+              <a class="header-link link" href="./index.html">Studio</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="adress">
+          <ul class="header-contact list">
+            <li class="header-contact-item">
+              <a
+                class="header-contact-link link"
+                href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="header-contact-item">
+              <a class="header-contact-link link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <!--HERO-->
       <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="hero-btn">Order Service</button>
+        <div class="container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button type="button" class="hero-btn">Order Service</button>
+        </div>
       </section>
       <!--SOLUTIONS-->
-      <section class="solutions">
-        <h2 class="solutions-page-title visually-hidden">solution</h2>
-        <ul class="solutions-list list">
-          <li class="solution-item">
-            <h3 class="section-subtitle">Strategy</h3>
-            <p class="section-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="solution-item">
-            <h3 class="section-subtitle">
-              Punctuality
-            </h3>
-            <p class="section-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="solution-item">
-              Diligence
-            </class=>
-            <p class="section-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="solution-item">
-            <h3 class="section-subtitle">
-              Technologies
-            </h3>
-            <p class="section-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+      <section class="solutions section">
+        <div class="container">
+          <h2 class="solutions-page-title visually-hidden">solution</h2>
+          <ul class="solutions-list list">
+            <li class="solution-item">
+              <h3 class="section-subtitle">Strategy</h3>
+              <p class="section-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="solution-item">
+              <h3 class="section-subtitle">Punctuality</h3>
+              <p class="section-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="solution-item">
+              <h3 class="section-subtitle">Diligence</h3>
+              <p class="section-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="solution-item">
+              <h3 class="section-subtitle">Technologies</h3>
+              <p class="section-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!--SERVICES-->
-      <section class="services">
-        <h2 class="section-title">What are we doing</h2>
-        <ul class="services-image-list list">
-          <li class="services-image-item">
-            <img
-              src="./images/computer.jpg"
-              alt="problem analysis"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li class="services-image-item">
-            <img
-              src="./images/applications.jpg"
-              alt="applications"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li class="services-image-item">
-            <img
-              src="./images/phone.jpg"
-              alt="information comes to phone"
-              width="360"
-              height="300"
-            />
-          </li>
-        </ul>
+      <section class="services section">
+        <div class="container">
+          <h2 class="section-title centered">What are we doing</h2>
+          <ul class="services-image-list list">
+            <li class="services-image-item">
+              <img
+                src="./images/computer.jpg"
+                alt="problem analysis"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li class="services-image-item">
+              <img
+                src="./images/applications.jpg"
+                alt="applications"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li class="services-image-item">
+              <img
+                src="./images/phone.jpg"
+                alt="information comes to phone"
+                width="360"
+                height="300"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <!--ABOUT-->
-      <section class="about">
-        <h2 class="section-title">Our Team</h2>
-        <ul class="about-image-list list">
-          <li class="about-image-item">
-            <img
-              class="about-img"
-              src="./images/markguerrero.jpg"
-              alt="a man with beard"
-              width="264"
-              height="260"
-            />
-            <h3 class="section-subtitle">
-              Mark Guerrero
-            </h3>
-            <p class="section-text">Product Designer</p>
-          </li>
-          <li class="about-image-list">
-            <img
-              class="about-img"
-              src="./images/tomford.jpg"
-              alt="smiling man"
-              width="264"
-              height="260"
-            />
-            <h3 class="section-subtitle">Tom Ford</h3>
-            <p class="section-text">Frontend Developer</p>
-          </li>
-          <li class="about-image-list">
-            <img
-              class="about-img"
-              src="./images/camilagarsia.jpg"
-              alt="a woman in pink sweater"
-              width="264"
-              height="260"
-            />
-            <h3 class="section-subtitle">
-              Camila Garcia
-            </h3>
-            <p class="section-text">Marketing</p>
-          </li>
-          <li class="about-image-list">
-            <img
-              class="about-img"
-              src="./images/danielwilson.jpg"
-              alt="smiling man with beard"
-              width="264"
-              height="260"
-            />
-            <h3 class="section-subtitle">
-              Daniel Wilson
-            </h3>
-            <p class="section-text">UI Designer</p>
-          </li>
-        </ul>
+      <section class="about section">
+        <div class="container">
+          <h2 class="section-title centered">Our Team</h2>
+          <ul class="list">
+            <li class="about-image-list">
+              <img
+                class="about-img"
+                src="./images/markguerrero.jpg"
+                alt="a man with beard"
+                width="264"
+                height="260"
+              />
+              <h3 class="section-subtitle">Mark Guerrero</h3>
+              <p class="section-text">Product Designer</p>
+            </li>
+            <li class="about-image-list">
+              <img
+                class="about-img"
+                src="./images/tomford.jpg"
+                alt="smiling man"
+                width="264"
+                height="260"
+              />
+              <h3 class="section-subtitle">Tom Ford</h3>
+              <p class="section-text">Frontend Developer</p>
+            </li>
+            <li class="about-image-list">
+              <img
+                class="about-img"
+                src="./images/camilagarsia.jpg"
+                alt="a woman in pink sweater"
+                width="264"
+                height="260"
+              />
+              <h3 class="section-subtitle">Camila Garcia</h3>
+              <p class="section-text">Marketing</p>
+            </li>
+            <li class="about-image-list">
+              <img
+                class="about-img"
+                src="./images/danielwilson.jpg"
+                alt="smiling man with beard"
+                width="264"
+                height="260"
+              />
+              <h3 class="section-subtitle">Daniel Wilson</h3>
+              <p class="section-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!--FOOTER-->
     <footer class="footer">
-      <a class="logo-footer link" href="./index.html"
-        ><span class="piece">WEB</span>STUDIO</a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="logo-footer link" href="./index.html"
+          ><span class="piece">WEB</span>STUDIO</a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
