--- a/index.html
+++ b/index.html
@@ -65,29 +65,29 @@
           <h2 class="solutions-page-title visually-hidden">solution</h2>
           <ul class="solutions-list list">
             <li class="solution-item">
-              <h3 class="section-subtitle">Strategy</h3>
-              <p class="section-text">
+              <h3 class="solution-subtitle">Strategy</h3>
+              <p class="solution-text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
             <li class="solution-item">
-              <h3 class="section-subtitle">Punctuality</h3>
-              <p class="section-text">
+              <h3 class="solution-subtitle">Punctuality</h3>
+              <p class="solution-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
             <li class="solution-item">
-              <h3 class="section-subtitle">Diligence</h3>
-              <p class="section-text">
+              <h3 class="solution-subtitle">Diligence</h3>
+              <p class="solution-text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
             <li class="solution-item">
-              <h3 class="section-subtitle">Technologies</h3>
-              <p class="section-text">
+              <h3 class="solution-subtitle">Technologies</h3>
+              <p class="solution-text">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
               </p>
@@ -151,8 +151,8 @@
                 width="264"
                 height="260"
               />
-              <h3 class="section-subtitle">Tom Ford</h3>
-              <p class="section-text">Frontend Developer</p>
+              <h3 class="section-subtitle centered">Tom Ford</h3>
+              <p class="section-text centered">Frontend Developer</p>
             </li>
             <li class="about-image-list">
               <img
@@ -162,8 +162,8 @@
                 width="264"
                 height="260"
               />
-              <h3 class="section-subtitle">Camila Garcia</h3>
-              <p class="section-text">Marketing</p>
+              <h3 class="section-subtitle centered">Camila Garcia</h3>
+              <p class="section-text centered">Marketing</p>
             </li>
             <li class="about-image-list">
               <img
@@ -173,8 +173,8 @@
                 width="264"
                 height="260"
               />
-              <h3 class="section-subtitle">Daniel Wilson</h3>
-              <p class="section-text">UI Designer</p>
+              <h3 class="section-subtitle centered">Daniel Wilson</h3>
+              <p class="section-text centered">UI Designer</p>
             </li>
           </ul>
         </div>
