--- a/portfolio.html
+++ b/portfolio.html
@@ -20,157 +20,183 @@
   <body>
     <!--HEADER-->
     <header class="header">
-      <nav class="header-navigation">
-        <a href="./index.html" class="logo link">WebStudio</a>
-        <ul class="header-list list">
-          <li class="header-item">
-            <a class="header-link link" href="./index.html">Studio</a>
-          </li>
-          <li class="header-item">
-            <a class="header-link link" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li class="header-item">
-            <a class="header-link link" href="contac">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address>
-        <ul class="header-contact list">
-          <li class="header-contact-item">
-            <a class="header-contact-link link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="header-contact-item">
-            <a class="header-contact-link link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container main-nav">
+        <nav class="header-navigation">
+          <a class="logo-header link" href="./index.html">
+            <span class="piece">WEB</span>STUDIO</a
+          >
+          <ul class="header-list list">
+            <li class="header-item">
+              <a class="header-link link" href="./index.html">Studio</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="adress">
+          <ul class="header-contact list">
+            <li class="header-contact-item">
+              <a
+                class="header-contact-link link"
+                href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="header-contact-item">
+              <a class="header-contact-link link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <!--MAIN MENU-->
       <section class="menu">
-        <h1 class="menu-page-title visually-hidden">filter buttons</h1>
-        <ul class="menu-list list">
-          <li class="menu-item">
-            <button type="button" class="menu-btn">All</button>
-          </li>
-          <li class="menu-item">
-            <button type="button" class="menu-btn">Web Site</button>
-          </li>
-          <li class="menu-item">
-            <button type="button" class="menu-btn">App</button>
-          </li>
-          <li class="menu-item">
-            <button type="button" class="menu-btn">Design</button>
-          </li>
-          <li class="menu-item">
-            <button type="button" class="menu-btn">Marketing</button>
-          </li>
-        </ul>
-        <ul class="portfolio-list list">
-          <li class="portfolio-item">
-            <img
-              class="portfolio-img"
-              src="./images/banking-app-interface-concept.jpg"
-              alt="interface concept"
-              width="360"
-              height="300"
-            />
-            <h2 class="section-subtitle">Banking App Interface Concept</h2>
-            <p class="section-text">App</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-img"
-              src="./images/cashless-payment.jpg"
-              alt="cashless payment by phone"
-              width="360"
-              height="300"
-            />
-            <h2 class="section-subtitle">Cashless Payment</h2>
-            <p class="section-text">Marketing</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-img"
-              src="./images/meditaion-app.jpg"
-              alt="meditaion app for computer and phone"
-              width="360"
-              height="300"
-            />
-            <h2 class="section-subtitle">Meditaion App</h2>
-            <p class="section-text">App</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-img"
-              src="./images/taxi-service.jpg"
-              alt="a person driving and using the applikation"
-              width="360"
-              height="300"
-            />
-            <h2 class="section-subtitle">Taxi Service</h2>
-            <p class="section-text">Marketing</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-img"
-              src="./images/screen-illustrations.jpg"
-              alt="a phone with different illustrations"
-              width="360"
-              height="300"
-            />
-            <h2 class="section-subtitle">Screen Illustrations</h2>
-            <p class="section-text">Design</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-img"
-              src="./images/online-courses.jpg"
-              alt="a young woman in orange sweater studying online course"
-              width="360"
-              height="300"
-            />
-            <h2 class="section-subtitle">Online Courses</h2>
-            <p class="section-text">Marketing</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-img"
-              src="./images/instagram-stories-concept.jpg"
-              alt="correct and consistent instagram stories concept"
-              width="360"
-              height="300"
-            />
-            <h2 class="section-subtitle">Instagram Stories Concept</h2>
-            <p class="section-text">Design</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-img"
-              src="./images/organic-food.jpg"
-              alt="a woman walks and carries organic products in a bag"
-              width="360"
-              height="300"
-            />
-            <h2 class="section-subtitle">Organic Food</h2>
-            <p class="section-text">Web Site</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-img"
-              src="./images/fresh-coffee.jpg"
-              alt="a man pouring whipped cream into coffee"
-              width="360"
-              height="300"
-            />
-            <h2 class="section-subtitle">Fresh Coffee</h2>
-            <p class="section-text">Web Site</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h1 class="menu-page-title visually-hidden">filter buttons</h1>
+          <ul class="menu-list list">
+            <li class="menu-item">
+              <button type="button" class="menu-btn">All</button>
+            </li>
+            <li class="menu-item">
+              <button type="button" class="menu-btn">Web Site</button>
+            </li>
+            <li class="menu-item">
+              <button type="button" class="menu-btn">App</button>
+            </li>
+            <li class="menu-item">
+              <button type="button" class="menu-btn">Design</button>
+            </li>
+            <li class="menu-item">
+              <button type="button" class="menu-btn">Marketing</button>
+            </li>
+          </ul>
+          <ul class="portfolio-list list">
+            <li class="portfolio-item">
+              <img
+                class="portfolio-img"
+                src="./images/banking-app-interface-concept.jpg"
+                alt="interface concept"
+                width="360"
+                height="300"
+              />
+              <div class="box">
+              <h2 class="section-subtitle">Banking App Interface Concept</h2>
+              <p class="sec-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-img"
+                src="./images/cashless-payment.jpg"
+                alt="cashless payment by phone"
+                width="360"
+                height="300"
+              />
+              <div class="box"
+              <h2 class="section-subtitle">Cashless Payment</h2>
+              <p class="sec-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-img"
+                src="./images/meditaion-app.jpg"
+                alt="meditaion app for computer and phone"
+                width="360"
+                height="300"
+              />
+              <div class="box"
+              <h2 class="sec-subtitle">Meditaion App</h2>
+              <p class="sec-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-img"
+                src="./images/taxi-service.jpg"
+                alt="a person driving and using the applikation"
+                width="360"
+                height="300"
+              />
+              <div class="box"
+              <h2 class="sec-subtitle">Taxi Service</h2>
+              <p class="sec-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-img"
+                src="./images/screen-illustrations.jpg"
+                alt="a phone with different illustrations"
+                width="360"
+                height="300"
+              />
+              <div class="box"
+              <h2 class="sec-subtitle">Screen Illustrations</h2>
+              <p class="sec-text">Design</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-img"
+                src="./images/online-courses.jpg"
+                alt="a young woman in orange sweater studying online course"
+                width="360"
+                height="300"
+              />
+              <div class="box"
+              <h2 class="sec-subtitle">Online Courses</h2>
+              <p class="sec-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-img"
+                src="./images/instagram-stories-concept.jpg"
+                alt="correct and consistent instagram stories concept"
+                width="360"
+                height="300"
+              />
+              <div class="box"
+              <h2 class="sec-subtitle">Instagram Stories Concept</h2>
+              <p class="sec-text">Design</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-img"
+                src="./images/organic-food.jpg"
+                alt="a woman walks and carries organic products in a bag"
+                width="360"
+                height="300"
+              />
+              <div class="box"
+              <h2 class="sec-subtitle">Organic Food</h2>
+              <p class="sec-text">Web Site</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-img"
+                src="./images/fresh-coffee.jpg"
+                alt="a man pouring whipped cream into coffee"
+                width="360"
+                height="300"
+              />
+              <div class="box"
+              <h2 class="sec-subtitle">Fresh Coffee</h2>
+              <p class="sec-text">Web Site</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!--FOOTER-->
