--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
           <button type="button" class="hero-btn">Order Service</button>
         </div>
       </section>
+
       <!--SOLUTIONS-->
       <section class="solutions section">
         <div class="container">
@@ -71,6 +72,7 @@
                 the perfect and creative solution.
               </p>
             </li>
+
             <li class="solution-item">
               <h3 class="solution-subtitle">Punctuality</h3>
               <p class="solution-text">
@@ -78,6 +80,7 @@
                 within the shortest possible time.
               </p>
             </li>
+
             <li class="solution-item">
               <h3 class="solution-subtitle">Diligence</h3>
               <p class="solution-text">
@@ -85,6 +88,7 @@
                 growth opportunities and minimize risk.
               </p>
             </li>
+
             <li class="solution-item">
               <h3 class="solution-subtitle">Technologies</h3>
               <p class="solution-text">
@@ -127,6 +131,7 @@
           </ul>
         </div>
       </section>
+
       <!--ABOUT-->
       <section class="about section">
         <div class="container">
@@ -140,9 +145,12 @@
                 width="264"
                 height="260"
               />
-              <h3 class="section-subtitle">Mark Guerrero</h3>
-              <p class="section-text">Product Designer</p>
+              <div class="set">
+                <h3 class="section-subtitle">Mark Guerrero</h3>
+                <p class="section-text">Product Designer</p>
+              </div>
             </li>
+
             <li class="about-image-list">
               <img
                 class="about-img"
@@ -151,9 +159,12 @@
                 width="264"
                 height="260"
               />
-              <h3 class="section-subtitle centered">Tom Ford</h3>
-              <p class="section-text centered">Frontend Developer</p>
+              <div class="set">
+                <h3 class="section-subtitle centered">Tom Ford</h3>
+                <p class="section-text centered">Frontend Developer</p>
+              </div>
             </li>
+
             <li class="about-image-list">
               <img
                 class="about-img"
@@ -162,9 +173,12 @@
                 width="264"
                 height="260"
               />
-              <h3 class="section-subtitle centered">Camila Garcia</h3>
-              <p class="section-text centered">Marketing</p>
+              <div class="set">
+                <h3 class="section-subtitle centered">Camila Garcia</h3>
+                <p class="section-text centered">Marketing</p>
+              </div>
             </li>
+
             <li class="about-image-list">
               <img
                 class="about-img"
@@ -173,13 +187,16 @@
                 width="264"
                 height="260"
               />
-              <h3 class="section-subtitle centered">Daniel Wilson</h3>
-              <p class="section-text centered">UI Designer</p>
+              <div class="set">
+                <h3 class="section-subtitle centered">Daniel Wilson</h3>
+                <p class="section-text centered">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
       </section>
     </main>
+
     <!--FOOTER-->
     <footer class="footer">
       <div class="container">
