--- a/portfolio.html
+++ b/portfolio.html
@@ -87,8 +87,8 @@
                 height="300"
               />
               <div class="box">
-              <h2 class="section-subtitle">Banking App Interface Concept</h2>
-              <p class="sec-text">App</p>
+                <h2 class="section-subtitle">Banking App Interface Concept</h2>
+                <p class="sec-text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
@@ -99,9 +99,9 @@
                 width="360"
                 height="300"
               />
-              <div class="box"
-              <h2 class="section-subtitle">Cashless Payment</h2>
-              <p class="sec-text">Marketing</p>
+              <div class="box">
+                <h2 class="section-subtitle">Cashless Payment</h2>
+                <p class="sec-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
@@ -112,9 +112,9 @@
                 width="360"
                 height="300"
               />
-              <div class="box"
-              <h2 class="sec-subtitle">Meditaion App</h2>
-              <p class="sec-text">App</p>
+              <div class="box">
+                <h2 class="sec-subtitle">Meditaion App</h2>
+                <p class="sec-text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
@@ -125,9 +125,9 @@
                 width="360"
                 height="300"
               />
-              <div class="box"
-              <h2 class="sec-subtitle">Taxi Service</h2>
-              <p class="sec-text">Marketing</p>
+              <div class="box">
+                <h2 class="sec-subtitle">Taxi Service</h2>
+                <p class="sec-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
@@ -138,9 +138,9 @@
                 width="360"
                 height="300"
               />
-              <div class="box"
-              <h2 class="sec-subtitle">Screen Illustrations</h2>
-              <p class="sec-text">Design</p>
+              <div class="box">
+                <h2 class="sec-subtitle">Screen Illustrations</h2>
+                <p class="sec-text">Design</p>
               </div>
             </li>
             <li class="portfolio-item">
@@ -151,9 +151,9 @@
                 width="360"
                 height="300"
               />
-              <div class="box"
-              <h2 class="sec-subtitle">Online Courses</h2>
-              <p class="sec-text">Marketing</p>
+              <div class="box">
+                <h2 class="sec-subtitle">Online Courses</h2>
+                <p class="sec-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
@@ -164,9 +164,9 @@
                 width="360"
                 height="300"
               />
-              <div class="box"
-              <h2 class="sec-subtitle">Instagram Stories Concept</h2>
-              <p class="sec-text">Design</p>
+              <div class="box">
+                <h2 class="sec-subtitle">Instagram Stories Concept</h2>
+                <p class="sec-text">Design</p>
               </div>
             </li>
             <li class="portfolio-item">
@@ -177,9 +177,9 @@
                 width="360"
                 height="300"
               />
-              <div class="box"
-              <h2 class="sec-subtitle">Organic Food</h2>
-              <p class="sec-text">Web Site</p>
+              <div class="box">
+                <h2 class="sec-subtitle">Organic Food</h2>
+                <p class="sec-text">Web Site</p>
               </div>
             </li>
             <li class="portfolio-item">
@@ -190,9 +190,9 @@
                 width="360"
                 height="300"
               />
-              <div class="box"
-              <h2 class="sec-subtitle">Fresh Coffee</h2>
-              <p class="sec-text">Web Site</p>
+              <div class="box">
+                <h2 class="sec-subtitle">Fresh Coffee</h2>
+                <p class="sec-text">Web Site</p>
               </div>
             </li>
           </ul>
@@ -200,12 +200,18 @@
       </section>
     </main>
     <!--FOOTER-->
-    <footer class="footer">
-      <a href="./index.html" class="logo link">WebStudio</a>
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+  </body>
+</html>
+ <footer class="footer">
+      <div class="container">
+        <a class="logo-footer link" href="./index.html"
+          ><span class="piece">WEB</span>STUDIO</a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
