--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
@@ -132,14 +139,14 @@
         </div>
       </section>
 
-      <!--ABOUT-->
-      <section class="about section">
+      <!--TEAM-->
+      <section class="team section">
         <div class="container">
-          <h2 class="section-title centered">Our Team</h2>
+          <h2 class="team-title centered">Our Team</h2>
           <ul class="list">
-            <li class="about-image-list">
+            <li class="team-image-list">
               <img
-                class="about-img"
+                class="team-img"
                 src="./images/markguerrero.jpg"
                 alt="a man with beard"
                 width="264"
