--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <!--HEADER-->
     <header class="header">
-      <div class="container main-nav">
+      <div class="container header-container">
         <nav class="header-navigation">
           <a class="logo-header link" href="./index.html">
             <span class="piece">WEB</span>STUDIO</a
@@ -60,7 +60,7 @@
     </header>
     <main>
       <!--HERO-->
-      <section class="hero">
+      <section class="hero section">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" class="hero-btn">Order Service</button>
@@ -70,8 +70,8 @@
       <!--SOLUTIONS-->
       <section class="solutions section">
         <div class="container">
-          <h2 class="solutions-page-title visually-hidden">solution</h2>
-          <ul class="solutions-list list">
+          <h2 class="section-title visually-hidden">solution</h2>
+          <ul class="solutions-list">
             <li class="solution-item">
               <h3 class="solution-subtitle">Strategy</h3>
               <p class="solution-text">
@@ -109,9 +109,9 @@
       <!--SERVICES-->
       <section class="services section">
         <div class="container">
-          <h2 class="section-title centered">What are we doing</h2>
-          <ul class="services-image-list list">
-            <li class="services-image-item">
+          <h2 class="services-title centered">What are we doing</h2>
+          <ul class="services-list">
+            <li class="services-item">
               <img
                 src="./images/computer.jpg"
                 alt="problem analysis"
@@ -119,7 +119,7 @@
                 height="300"
               />
             </li>
-            <li class="services-image-item">
+            <li class="services-item">
               <img
                 src="./images/applications.jpg"
                 alt="applications"
@@ -127,7 +127,7 @@
                 height="300"
               />
             </li>
-            <li class="services-image-item">
+            <li class="services-item">
               <img
                 src="./images/phone.jpg"
                 alt="information comes to phone"
@@ -142,9 +142,9 @@
       <!--TEAM-->
       <section class="team section">
         <div class="container">
-          <h2 class="team-title centered">Our Team</h2>
-          <ul class="list">
-            <li class="team-image-list">
+          <h2 class="team-title centered section-title">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-item">
               <img
                 class="team-img"
                 src="./images/markguerrero.jpg"
@@ -152,51 +152,51 @@
                 width="264"
                 height="260"
               />
-              <div class="set">
-                <h3 class="section-subtitle">Mark Guerrero</h3>
-                <p class="section-text">Product Designer</p>
+              <div class="team-set">
+                <h3 class="team-subtitle centered">Mark Guerrero</h3>
+                <p class="team-text centered">Product Designer</p>
               </div>
             </li>
 
-            <li class="about-image-list">
+            <li class="team-item">
               <img
-                class="about-img"
+                class="team-img"
                 src="./images/tomford.jpg"
                 alt="smiling man"
                 width="264"
                 height="260"
               />
-              <div class="set">
-                <h3 class="section-subtitle centered">Tom Ford</h3>
-                <p class="section-text centered">Frontend Developer</p>
+              <div class="team-set">
+                <h3 class="team-subtitle centered">Tom Ford</h3>
+                <p class="team-text centered">Frontend Developer</p>
               </div>
             </li>
 
-            <li class="about-image-list">
+            <li class="team-item">
               <img
-                class="about-img"
+                class="team-img"
                 src="./images/camilagarsia.jpg"
                 alt="a woman in pink sweater"
                 width="264"
                 height="260"
               />
-              <div class="set">
-                <h3 class="section-subtitle centered">Camila Garcia</h3>
-                <p class="section-text centered">Marketing</p>
+              <div class="team-set">
+                <h3 class="team-subtitle centered">Camila Garcia</h3>
+                <p class="team-text centered">Marketing</p>
               </div>
             </li>
 
-            <li class="about-image-list">
+            <li class="team-item">
               <img
-                class="about-img"
+                class="team-img"
                 src="./images/danielwilson.jpg"
                 alt="smiling man with beard"
                 width="264"
                 height="260"
               />
-              <div class="set">
-                <h3 class="section-subtitle centered">Daniel Wilson</h3>
-                <p class="section-text centered">UI Designer</p>
+              <div class="team-set">
+                <h3 class="team-subtitle centered">Daniel Wilson</h3>
+                <p class="team-text centered">UI Designer</p>
               </div>
             </li>
           </ul>
