--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
   <body>
     <!--HEADER-->
     <header class="header">
-      <div class="container main-nav">
+      <div class="container header-container">
         <nav class="header-navigation">
           <a class="logo-header link" href="./index.html">
             <span class="piece">WEB</span>STUDIO</a
@@ -54,7 +54,7 @@
     </header>
     <main>
       <!--MAIN MENU-->
-      <section class="menu">
+      <section class="menu section">
         <div class="container">
           <h1 class="menu-page-title visually-hidden">filter buttons</h1>
           <ul class="menu-list list">
@@ -84,7 +84,7 @@
                 height="300"
               />
               <div class="box">
-                <h2 class="section-subtitle">Banking App Interface Concept</h2>
+                <h2 class="sec-subtitle">Banking App Interface Concept</h2>
                 <p class="sec-text">App</p>
               </div>
             </li>
@@ -97,7 +97,7 @@
                 height="300"
               />
               <div class="box">
-                <h2 class="section-subtitle">Cashless Payment</h2>
+                <h2 class="sec-subtitle">Cashless Payment</h2>
                 <p class="sec-text">Marketing</p>
               </div>
             </li>
